update synchronisation et modifications générales
